unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Customer_Health2_Previous__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Customer_Health2_Previous__c</fullName>
    <description>Used for storing a timestamped customer health value to allow tracking of the previous state</description>
    <inlineHelpText>The previous value of Customer Health</inlineHelpText>
    <label>Customer Health Previous</label>
    <type>TextArea</type>
</CustomField>