unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Demo_Data__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Demo_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The &#39;Demo Data&#39; that this project is related to.</inlineHelpText>
    <label>Demo Data</label>
    <referenceTo>project_cloud__Demo_Data__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>