unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Duration__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Duration__c</fullName>
    <inlineHelpText>Shows a rollup summary of the total number of days in the project from the Phase and Task levels.</inlineHelpText>
    <label>Duration (days)</label>
    <summarizedField>project_cloud__Project_Phase__c.project_cloud__Duration__c</summarizedField>
    <summaryForeignKey>project_cloud__Project_Phase__c.project_cloud__Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>