unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__End__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__End__c</fullName>
    <description>Rollup summary of the Project Task End dates. The Sprint End Dates on the Project Phases are not used when determining this date</description>
    <inlineHelpText>The calculated end date of the last task in the project.</inlineHelpText>
    <label>Project End Date</label>
    <summarizedField>project_cloud__Project_Phase__c.project_cloud__End__c</summarizedField>
    <summaryForeignKey>project_cloud__Project_Phase__c.project_cloud__Project__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>