unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Estimated_Hours__c</fullName>
    <inlineHelpText>Shows a rollup summary of Estimated Hours on tasks under the project.</inlineHelpText>
    <label>Estimated Hours</label>
    <summarizedField>project_cloud__Project_Phase__c.project_cloud__Estimated_Hours__c</summarizedField>
    <summaryForeignKey>project_cloud__Project_Phase__c.project_cloud__Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>