unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Expenses_Actual__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Expenses_Actual__c</fullName>
    <inlineHelpText>A Currency field used indicate the total amount of expenses on a project. When entering expense records, this field will summarize related expense records with the &quot;Actual&quot; type or allows for manual entry.</inlineHelpText>
    <label>Total Actual Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>