unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Expenses_Budgeted__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Expenses_Budgeted__c</fullName>
    <inlineHelpText>A Currency field used indicate the total amount of budgeted expenses on a project. When entering expense records, this field will summarize related expense records with the &quot;Budgeted&quot; type or allows for manual entry.</inlineHelpText>
    <label>Total Budgeted Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>