unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Financial_Health2__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Financial_Health2__c</fullName>
    <description>Determines the Financial Health of the project</description>
    <inlineHelpText>Manually select a color choice to change the display of the Financial Health Traffic Light. Users are required to make an entry to the Financial Health Reason to save changes to this field.</inlineHelpText>
    <label>Financial Health</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>project_cloud__Health</valueSetName>
    </valueSet>
</CustomField>