unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Functional_Area__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Functional_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The &#39;Functional Area&#39; of the business that this project is related to</inlineHelpText>
    <label>Functional Area</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The functional area selected is not a child functional area, please select a functional area which belongs to a parent functional area</errorMessage>
        <filterItems>
            <field>project_cloud__Functional_Area__c.project_cloud__Parent__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <infoMessage>Search for a child functional which belongs to a parent functional area</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>project_cloud__Functional_Area__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>