unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Health__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Health__c</fullName>
    <description>Determines the health of the Project Task, and defines the Traffic Light formula</description>
    <inlineHelpText>Manually select a text color choice to change the display of the Health Traffic Light. Users are required to make an entry to the Health Reason to save changes to this field.</inlineHelpText>
    <label>Health</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
                <default>true</default>
                <label>Green</label>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>