unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Health_Previous__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Health_Previous__c</fullName>
    <description>Used for storing a timestamped health value to allow tracking of the previous state</description>
    <inlineHelpText>The previous value of Health</inlineHelpText>
    <label>Health Previous</label>
    <type>TextArea</type>
</CustomField>