unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Health_Reason__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Health_Reason__c</fullName>
    <description>When the Health of a Project Task is changed a reason is required.</description>
    <inlineHelpText>A plain text area with a 255 character limit allows users to provide details about project health.</inlineHelpText>
    <label>Health Reason</label>
    <type>TextArea</type>
</CustomField>