unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Hours_Block__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Hours_Block__c</fullName>
    <defaultValue>1.00</defaultValue>
    <description>The unit of time the Project Task&#39;s length must fit into. For example if the unit is 4 a task must be 4, 8 12 hours etc. The same rule applies to Time Entry objects. This is a system field and should never be modified.
(Cloud Coach 21-JUL-11)</description>
    <inlineHelpText>This is a system field and should never be modified.</inlineHelpText>
    <label>Hours Block</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>