unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Hours_In_Day__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Hours_In_Day__c</fullName>
    <defaultValue>8</defaultValue>
    <description>This is the value used for the calculation of a project task end date. Currently defaults to 8 which is the standard number of hours in a working day. This is a system field and should never be modified.
(Cloud Coach 21-JUL-11)</description>
    <inlineHelpText>This is a system field and should never be modified.</inlineHelpText>
    <label>Hours In Day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>