unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__IsManual_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__IsManual_Completed_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Manually override Project Completion Date</inlineHelpText>
    <label>Manually Populate Completed Date</label>
    <type>Checkbox</type>
</CustomField>