unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__IsOnly_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__IsOnly_Subscriptions__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is the resourcing scheme for the Project only using Subscriptions. This will control the Project Task Resourcing page features.</description>
    <inlineHelpText>When checked, controls the Project Task Resourcing page features.</inlineHelpText>
    <label>Only Subscriptions?</label>
    <type>Checkbox</type>
</CustomField>