unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__IsTemplate__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__IsTemplate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if this project can be used as a Project Template</description>
    <inlineHelpText>When checked, indicates that the project is a template.</inlineHelpText>
    <label>Project Template</label>
    <type>Checkbox</type>
</CustomField>