unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__IsWeekly_Assignments__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__IsWeekly_Assignments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Restricts time based assignments to single weeks (Sun - Sat)</description>
    <inlineHelpText>When true, time based assignments can only be a single week (Sun - Sat)</inlineHelpText>
    <label>Weekly Time Based Assignments</label>
    <type>Checkbox</type>
</CustomField>