unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__IsWorking_Sunday__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__IsWorking_Sunday__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean value indicating if Sunday is a day this task will be worked on. This is a system field and should never be modified.</description>
    <inlineHelpText>This is a system field and should never be modified.</inlineHelpText>
    <label>Working Day Sunday</label>
    <type>Checkbox</type>
</CustomField>