unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Late_Ending_Tasks__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Late_Ending_Tasks__c</fullName>
    <description>Boolean value indicating if the Project has Tasks that end late.</description>
    <formula>project_cloud__Late_Task_End__c &lt; TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>When checked, indicates if the project includes tasks with a &quot;Late&quot; status.</inlineHelpText>
    <label>Late Ending Tasks?</label>
    <type>Checkbox</type>
</CustomField>