unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Late_Starting_Tasks__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Late_Starting_Tasks__c</fullName>
    <description>Boolean value indicating if the Project has Tasks that start late.</description>
    <formula>project_cloud__Late_Task_Start__c &lt; TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>When checked, indicates that the project has tasks with a &quot;Not Started - Late&quot; status.</inlineHelpText>
    <label>Late Starting Tasks?</label>
    <type>Checkbox</type>
</CustomField>