unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Late_Task_End__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Late_Task_End__c</fullName>
    <description>The end date of the first task that is &quot;In Progress&quot;.</description>
    <inlineHelpText>Shows the calculated end date of the first task with an &quot;In Progress&quot; status.</inlineHelpText>
    <label>Late Ending Task Date (System)</label>
    <summarizedField>project_cloud__Project_Phase__c.project_cloud__Late_Task_End__c</summarizedField>
    <summaryForeignKey>project_cloud__Project_Phase__c.project_cloud__Project__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>