unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Late_Task_Start__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Late_Task_Start__c</fullName>
    <description>The start date of the first unstarted task.</description>
    <inlineHelpText>Shows the calculated start date of the first task with a &quot;Not Started&quot; status.</inlineHelpText>
    <label>Late Starting Task Date (System)</label>
    <summarizedField>project_cloud__Project_Phase__c.project_cloud__Late_Task_Start__c</summarizedField>
    <summaryForeignKey>project_cloud__Project_Phase__c.project_cloud__Project__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>