unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Location__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The &#39;Location&#39; (Work Type) that this project is related to.</inlineHelpText>
    <label>Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>project_cloud__Work_Type__c.project_cloud__Type__c</field>
            <operation>equals</operation>
            <value>Location</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>project_cloud__Work_Type__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>