unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Methodology__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Methodology__c</fullName>
    <label>Methodology</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kanban</fullName>
            </value>
            <value>
                <fullName>Waterfall</fullName>
                <default>true</default>
                <label>Waterfall</label>
            </value>
            <value>
                <fullName>Water-Scrum-Fall</fullName>
            </value>
            <value>
                <fullName>Checklist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>