unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Milestone_Process__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Milestone_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Milestone Process</label>
    <referenceTo>project_cloud__Milestone_Process__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>