unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Monthly_Expenses__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Monthly_Expenses__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked this restricts the monthly budget to a single value per month per cost area, allowing for spreadsheet like entry of the project budget.</inlineHelpText>
    <label>Single Monthly Budget</label>
    <type>Checkbox</type>
</CustomField>