unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Phase_Status_Minimum__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Phase_Status_Minimum__c</fullName>
    <description>System calculated field used to derive the overall project status. This is a system field and should not be visible. The status field is what should be used.</description>
    <inlineHelpText>A rollup from Task Status&#39; used to drive overall project status.</inlineHelpText>
    <label>Phase Status Minimum</label>
    <summarizedField>project_cloud__Project_Phase__c.project_cloud__Task_Status_Minimum__c</summarizedField>
    <summaryForeignKey>project_cloud__Project_Phase__c.project_cloud__Project__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>