unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Project_Charter__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Project_Charter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The &#39;Project Charter&#39; that this project is related to.</inlineHelpText>
    <label>Project Charter</label>
    <referenceTo>project_cloud__Charter__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>