unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Protected_EPV__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Protected_EPV__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the External Project View protected. (Requires and email that matches one of the project&#39;s Stakeholder Contacts</description>
    <inlineHelpText>When checked, enables protection for the External Project View.</inlineHelpText>
    <label>Protected External Project View</label>
    <type>Checkbox</type>
</CustomField>