unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Resources_Health2__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Resources_Health2__c</fullName>
    <description>Determines the health of the Project Timeline</description>
    <inlineHelpText>Manually select a color choice to change the display of the Resources Health Traffic Light. Users are required to make an entry to the Resources Health Reason to save changes to this field.</inlineHelpText>
    <label>Resources Health</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>project_cloud__Health</valueSetName>
    </valueSet>
</CustomField>