unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Resources_Health2_Previous__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Resources_Health2_Previous__c</fullName>
    <description>Used for storing a timestamped resource health value to allow tracking of the previous state</description>
    <inlineHelpText>The previous value of Resources Health</inlineHelpText>
    <label>Resources Health Previous</label>
    <type>TextArea</type>
</CustomField>