unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Resources_Health2_Reason__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Resources_Health2_Reason__c</fullName>
    <description>When the Resources Health of a Project is changed a reason is required.</description>
    <inlineHelpText>A plain text area with a 255 character limit allows users to provide details about resources health.</inlineHelpText>
    <label>Resources Health Reason</label>
    <type>TextArea</type>
</CustomField>