unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Resourcing_Mode__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Resourcing_Mode__c</fullName>
    <description>The type of resourcing this project uses</description>
    <inlineHelpText>The type of resourcing this project uses</inlineHelpText>
    <label>Resourcing Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>project_cloud__Resourcing_Mode</valueSetName>
    </valueSet>
</CustomField>