unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Settings__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Settings__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a system field indicating the settings for the project</description>
    <inlineHelpText>Settings for the project</inlineHelpText>
    <label>Settings</label>
    <referenceTo>project_cloud__Project_Settings__c</referenceTo>
    <relationshipLabel>Projects Using Settings</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>