unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Sorting_Hash__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Sorting_Hash__c</fullName>
    <description>This field is used for sorting Project in the Cloud Coach Enterprise default order of Start, End, Name</description>
    <formula>BLANKVALUE(TEXT(project_cloud__Calculated_Start__c), &#39;9999-99-99&#39;) &amp; BLANKVALUE(TEXT(project_cloud__Calculated_End__c), &#39;9999-99-99&#39;) &amp; Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field can be used to sort Projects using the Cloud Coach Enterprise default order</inlineHelpText>
    <label>Sorting Column</label>
    <type>Text</type>
</CustomField>