unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Stage_Gate_Process__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Stage_Gate_Process__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Stage Gate Process</label>
    <referenceTo>project_cloud__Stage_Gate_Process__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>