unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Start__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Start__c</fullName>
    <description>Rollup summary of the Project Task Start dates. The Sprint Start Dates on the Project Phases are not used when determining this date</description>
    <inlineHelpText>The calculated start date of the first task in the project.</inlineHelpText>
    <label>Project Start Date</label>
    <summarizedField>project_cloud__Project_Phase__c.project_cloud__Start__c</summarizedField>
    <summaryForeignKey>project_cloud__Project_Phase__c.project_cloud__Project__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>