unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Subscribed__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Subscribed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this indicates the Project has been fully subscribed. i.e there are no more subscriptions that need to be created</description>
    <inlineHelpText>When checked, this indicates the Project which this task belongs to has been marked fully subscribed. (This is only applicable when allocating at the project level)</inlineHelpText>
    <label>Fully Subscribed</label>
    <type>Checkbox</type>
</CustomField>