unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Ticket__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is populated by the Create Project button on the Ticket</description>
    <inlineHelpText>Shows the Name of the ticket that a Project was created from.</inlineHelpText>
    <label>Ticket (Project was created from)</label>
    <referenceTo>project_cloud__Ticket__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>