unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Timeline_Health2_Previous__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Timeline_Health2_Previous__c</fullName>
    <description>Used for storing a timestamped timeline health value to allow tracking of the previous state</description>
    <inlineHelpText>The previous value of Timeline Health</inlineHelpText>
    <label>Timeline Health Previous</label>
    <type>TextArea</type>
</CustomField>